@@ -158,6 +158,11 @@ RSC['client/registerCapability'] = function(_, params, ctx)
         end
       end
     end
+    if reg.method == 'textDocument/diagnostic' then
+      for bufnr in pairs(client.attached_buffers) do
+        vim.lsp.diagnostic._refresh(bufnr, client.id)
+      end
+    end
   end
   return vim.NIL
 end
